Opened 10 years ago
Closed 10 years ago
#11663 closed bug (fixed)
HaikuDepot: Selecting featured applications not showing package information
Reported by: | vidrep | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev48564 x86_gcc2 When opening HaikuDepot featured packages are shown. However, when selecting any of them no package information is shown unless one of the "show" selections is toggled first.
Attachments (1)
Change History (2)
by , 10 years ago
Attachment: | screenshot2.png added |
---|
comment:1 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev48568.